# nilmtk-base

./: .gitignore  Makefile  pyproject.toml  requirements.txt
data/: co_test.h5  energy.h5  energy_complex.h5  random.h5
docs/diagrams/: .$class-architecture.drawio.dtmp  class-architecture.drawio
docs/manual/user_guide/: data.ipynb
nilmtk/: __init__.py  api.py  appliance.py  building.py  dataset.py  docinherit.py  elecmeter.py  electric.py  losses.py  measurement.py  metergroup.py  metrics.py  node.py  plots.py  results.py  timeframe.py  timeframegroup.py  utils.py  version.py
nilmtk/base/: __init__.py  datastore.py  disaggregator.py  docinherit.py  node.py  results.py
nilmtk/dataset_converters/ampds/: convert_ampds.py
nilmtk/dataset_converters/caxe/: convert_caxe.py
nilmtk/dataset_converters/combed/: convert_combed.py  download.py
nilmtk/dataset_converters/dataport/: csv_converter.py  download_dataport.py
nilmtk/dataset_converters/deddiag/: convert_deddiag.py
nilmtk/dataset_converters/dred/: convert_dred.py
nilmtk/dataset_converters/eco/: convert_eco.py
nilmtk/dataset_converters/greend/: convert_greend.py
nilmtk/dataset_converters/hes/: convert_hes.py
nilmtk/dataset_converters/hipe/: convert_hipe.py
nilmtk/dataset_converters/iawe/: convert_iawe.py
nilmtk/dataset_converters/ideal/: convert_ideal.py
nilmtk/dataset_converters/redd/: convert_redd.py
nilmtk/dataset_converters/refit/: convert_refit.py
nilmtk/dataset_converters/smart/: convert_smart.py
nilmtk/dataset_converters/ukdale/: convert_ukdale.py
nilmtk/datastore/: __init__.py  csvdatastore.py  datastore.py  hdfdatastore.py  key.py  memory.py  tmpdatastore.py
nilmtk/disaggregate/: __init__.py  combinatorial_optimisation.py  disaggregator.py  fhmm_exact.py  hart_85.py  mean.py
nilmtk/feature_detectors/: cluster.py  steady_states.py
nilmtk/legacy/: __init__.py
nilmtk/legacy/disaggregate/: __init__.py  combinatorial_optimisation.py  disaggregator.py  fhmm_exact.py  hart_85.py  maximum_likelihood_estimation.py
nilmtk/metrics/: metrics.py
nilmtk/preprocessing/: apply.py  clip.py
nilmtk/stats/: __init__.py  dropoutrate.py  dropoutrateresults.py  goodsections.py  goodsectionsresults.py  histogram.py  totalenergy.py  totalenergyresults.py
nilmtk/stats/tests/: test_dropoutrate.py  test_locategoodsections.py  test_totalenergy.py  test_totalenergyresults.py
nilmtk/tests/: generate_data.py  test_combinatorial_optimisation.py  test_datastore.py  test_datastore_converter.py  test_elecmeter.py  test_fhmm.py  test_measurement.py  test_metergroup.py  test_metrics.py  test_node.py  test_timeframe.py  testingtools.py
nilmtk/timeframe/: __init__.py  timeframe.py  timeframegroup.py
tests/: __init__.py  generate_data.py  test_datastore.py  test_elecmeter.py  test_measurement.py  test_metergroup.py  test_node.py  test_timeframe.py  testingtools.py
tests/data/: co_test.h5  energy.h5  energy_complex.h5  random.h5
tests/test_stats/: test_dropoutrate.py  test_locategoodsections.py  test_totalenergy.py  test_totalenergyresults.py
