[tool.poetry]
name = "nilmtk"
version = "0.1.0"
description = "Estimate the energy consumer by individual appliances from whole-house power meter readings"
authors = ["Emilio J. Palacios-Garcia <emiliojose.palaciosgarcia@kuleuven.be>"]
license = "\"Apache 2.0\""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.3"
numpy = "^1.25.1"
networkx = "^3.1"
scipy = "^1.11.1"
tables = "^3.8.0"
scikit-learn = "^1.3.0"
PyYAML = "^6.0"
nilm-metadata = {git = "ssh://git@gitlab.esat.kuleuven.be/premises/nilmtk-metadata.git", branch = "main"}
pytz = "^2023.3"


[tool.poetry.group.test.dependencies]
nose = "^1.3.7"
coverage = "^7.2.7"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.2"
jupyterlab = "^4.0.2"
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
mypy = "^1.4.1"

[tool.isort]
profile = "black"
skip = ["__init__.py"]

[tool.coverage.run]
source = ["nilmtk"]

[tool.coverage.report]
omit = [ 
    "*/python?.?/*",
    "*/site-packages/nose/*",
    "*nilmtk/notebooks/*"
]

# Fix warnings for libraries without stubs
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "networkx",
    "scipy.*",
    "sklearn.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "nilm_metadata.*",
    "pytz",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


